MDEV-17376	Server fails to set ADD_PK_INDEX, DROP_PK_INDEX 		if unique index nominated as PK

- Server sets the flag ADD_PK_INDEX, DROP_PK_INDEX if the unique key
nominated as Primary key.